# amorph-code

./: .coverage  .gitignore  CHANGELOG.md  QUICKSTART.md  README.md  RELEASE_NOTES_v0.2.md  WHATSNEW_v0.2.md  pyproject.toml  requirements.txt
.github/workflows/: test.yml
amorph/: __init__.py  acir.py  bench.py  cli.py  edits.py  engine.py  errors.py  format.py  io.py  migrate.py  op_registry.py  refactor.py  rewrite.py  scope_analyzer.py  suggestions.py  types.py  uid.py  validate.py
amorph/tests/: __init__.py  conftest.py  test_acir.py  test_edits.py  test_engine.py  test_format.py  test_refactor.py  test_uid.py  test_validate.py
amorph/tests/fixtures/: factorial.json  simple.json
amorph/tests/fixtures/malformed/: invalid_statement.json  not_a_list.json
docs/: EDIT-OPS.md  FORMATS.md  MILESTONE_FASE1-2.md  PROGRESS.md  PROGRESS_FINAL.md  REFACTORING.md  REWRITE.md  ROADMAP_v0.2.md  SESSION_SUMMARY.md  STATUS.md  SUITABILITY.md  VALIDATION.md
edits/: delete_node.json  insert.json  insert_redundant.json  rename.json  rename_by_id.json  rename_fix.json  rename_variable.json  replace_call.json
examples/: countdown.amr.json  factorial.amr.json  fib.amr.json  hello.amr.json  helloworld.amr.json  math.amr.json  matrix_nxn.amr.json  refactoring_demo.amr.json  rewrite_rules.guard.json  rewrite_rules.simplify.json  validation_demo.amr.json
schema/: amorph-0.1.schema.json  edits-0.1.schema.json
